created the register page

--- a/src/prs/templates/prs/index.html
+++ b/src/prs/templates/prs/index.html
@@ -39,6 +39,12 @@
                 {% endfor %}
             </tbody>
         </table>
+
+        <div class="form-content">
+            <div class="form-group">
+                <button class="btn" type="submit">Novo Jogador</button>
+            </div>
+        </div>
     </div>
 {% else %}
       <div class="single-player">
