--- a/src/prs/templates/prs/register.html
+++ b/src/prs/templates/prs/register.html
@@ -18,7 +18,8 @@
         </div>
          <div class="form-content">
             <div class="form-group">
-                <button class="btn" type="submit">Send</button>
+                <button class="btn" type="submit">Cadastrar</button>
+                <button class="btn" type="submit">Listar jogadores</button>
             </div>
         </div>
     </form>
