Getting the data from form, added the save method but its still in process and adjust the table name

--- a/src/prs/templates/prs/register.html
+++ b/src/prs/templates/prs/register.html
@@ -5,7 +5,7 @@
         <h2>Cadastro do jogador UOL</h2>
     </div>
     <form
-            action=""
+            action="{{ form_action }}"
             method="POST">
         {% csrf_token %}
         <div class="form-content">
@@ -13,6 +13,7 @@
                 <div class="form-group">
                     <label for="{{ field_id_for_label }}"> {{ field.label }} </label>
                     {{ field }}
+                    {{ form_action }}
                 </div>
             {% endfor %}
         </div>
